<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tapathon</string>
    <string name="app_name_with_title">Tapathon</string>
    <string name="start">Start</string>
    <string name="start_game">Start</string>
    <string name="stop">Stop</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="join">Join</string>
    <string name="create">Create a new Tapathon</string>
    <string name="create_new">Create</string>
    <string name="cancel">Cancel</string>
    <string name="new_channel_name">Tapathon Name</string>
    <string name="enable_allshare">Enable AllShare</string>
    <string name="key_pref_music_volume">70</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="landing_tv_text">Tapathon</string>
    <string name="start_as_client">Start as Client</string>
    <string name="start_as_server">Start as Server</string>
    <string name="settings">Settings</string>
    <string name="group_play">Group Play</string>
    <string name="about">About</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="find_servers">Find servers</string>
    <string name="poker_rooms">Tapathons</string>
    <string name="disconnected">Disconnected</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="stand">Are you sure you want to stand from the table?</string>
    <string name="table_full_dialog_title">Table full</string>
    <string name="table_full_dialog_msg">The Tapathon you tried to connect to is full. Try again later.</string>
    <string name="amount_icon">amount_icon</string>
    <string name="bid">bid</string>
    <string name="min">min</string>
    <string name="username_dialog_message">Enter your name</string>
    <string name="username_dialog_title">Username</string>
    <string name="hello">Hello</string>
    <string name="wifi_off">WiFi is turned off or not connected to a network. You have to turn it on and connect to a network.</string>
    <string name="wifi_disconnected">WiFi got disconnected. Turn it on and reconnect to the server.</string>
    <string name="game_started">Game started</string>
    <string name="folded">folded</string>
    <string name="called">called</string>
    <string name="checked">checked</string>
    <string name="raised">raised to</string>
    <string name="all_in">went all-in</string>
    <string name="won">won</string>
    <string name="press_start">Press Start button to start new round</string>
    <string name="room">Tapathon-</string>
    <string name="about_info">An insanely fun Math game</string>
    <string name="searching_for_rooms">searching&#8230;</string>
    <string name="all_share_dialog_message">Tapathon can utilize a TV with AllShare Cast functionality for screen mirroring.\n\nPress OK and connect with TV to mirror the game.\n\nThis dialog will be automatically dismissed after the connection is established.</string>
    <string name="all_share_dialog_exit">Later</string>
    <string name="no_all_share_cast_dialog">Your device doesn\'t support AllShare Cast functionality.\n\nYou can always connect as client.</string>
</resources>
