<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_channel_name" android:gravity="center_vertical|center_horizontal"
            android:textColor="#7fff1a"/>

        <RadioGroup
            android:id="@+id/rg_lvl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/xhdpi_20dp">

            <RadioButton
                android:id="@+id/rb_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy"
                android:paddingLeft="@dimen/xhdpi_5dp"
                android:layout_marginRight="@dimen/xhdpi_20dp"/>

            <RadioButton
                android:id="@+id/rb_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                android:paddingLeft="@dimen/xhdpi_5dp"
                android:layout_marginRight="@dimen/xhdpi_20dp"/>

            <RadioButton
                android:id="@+id/rb_hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/xhdpi_5dp"
                android:text="@string/hard"/>

        </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:weightSum="1" >
        
        <Button
            android:id="@+id/btn_create"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="0.5"
        	android:text="@string/start"
            />
        
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="0.5"
        	android:text="@string/cancel" />
        
    </LinearLayout>
</LinearLayout>
